--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-
+  <link rel="apple-touch-icon" sizes="180x180" href="/Graphics/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/Graphics/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/Graphics/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/Graphics/favicon/site.webmanifest">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
